Diviso Customer e Admin in 2 file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,21 +4,23 @@ project(ProgettoVoli)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(ProgettoVoli main.cpp
-        domain/User.cpp
         domain/User.h
         repo/RepositoryInterface.h
         repo/UserRepository.cpp
         repo/UserRepository.h
-        util/idGenerator.cpp
-        util/idGenerator.h
+        util/IdGenerator.cpp
+        util/IdGenerator.h
         ui/CLI.cpp
         ui/CLI.h
         service/AuthService.cpp
         service/AuthService.h
-        domain/Client.cpp
-        domain/Client.h
+        domain/Customer.h
         service/AdminService.cpp
         service/AdminService.h
-        domain/Admin.cpp
         domain/Admin.h
+        main.cpp
+        main.cpp
+        enums/UserRole.h
+        enums/CustomerLevel.h
+        enums/AdminLevel.h
 )
